fixed spacing on edit and create product forms when footer is present

--- a/react-app/src/components/Footer.css
+++ b/react-app/src/components/Footer.css
@@ -1,8 +1,9 @@
-html,
+/* html,
 body {
  height: 100%;
  position: relative;
-}
+} */
+
 #wrapper {
  min-height: 100vh; /* will cover the 100% of viewport */
  overflow: hidden;
