--- a/react-app/src/components/Products/createForm.css
+++ b/react-app/src/components/Products/createForm.css
@@ -1,9 +1,7 @@
 
 .form-container, .edit-form-container{
-    position: absolute;
-    left: 50%;
-    top: 55%;
-    transform: translate(-50%, -50%);
+    margin: 10px auto;
+    width: 400px;
 }
 
 .create-product-form, .edit-product-form{
